// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RefundOrderForm/> render() should render 1`] = `
<Fragment>
  <Memo(OrderTable)
    currencyCode="USD"
    lineItems={
      Immutable.List [
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
      ]
    }
    onLineItemChange={[MockFunction]}
    refund={
      Immutable.Map {
        "shipping": Immutable.Map {
          "amount": "0.00",
          "tax": "0.00",
          "maximum_refundable": "2.00",
        },
        "refund_line_items": Immutable.List [
          Immutable.Map {
            "subtotal": "1.00",
            "location_id": 123,
            "price": "1.00",
            "discounted_price": "1.00",
            "quantity": 1,
            "discounted_total_price": "1.00",
            "total_tax": "0.20",
            "total_cart_discount_amount": "0.00",
            "restock_type": "no_restock",
            "line_item_id": 4193100136471,
          },
        ],
        "transactions": Immutable.List [
          Immutable.Map {
            "order_id": 1894175539223,
            "kind": "suggested_refund",
            "gateway": "manual",
            "parent_id": 2521452118039,
            "amount": "1.20",
            "currency": "USD",
            "maximum_refundable": "1.20",
          },
        ],
        "currency": "USD",
      }
    }
    shopCurrencyCode="USD"
    shopName="storegorgias3"
  />
  <OrderFooter
    actionName="shopifyCancelOrder"
    currencyCode="USD"
    editable={true}
    hasShippingLine={false}
    loading={false}
    notify={false}
    onNotifyChange={[MockFunction]}
    onPayloadChange={[MockFunction]}
    onReasonChange={[MockFunction]}
    payload={
      Immutable.Map {
        "currency": "USD",
        "restock": true,
        "notify": true,
        "refund_line_items": Immutable.List [
          Immutable.Map {
            "line_item_id": 4193100136471,
            "restock_type": "cancel",
            "fulfillment_status": null,
            "quantity": 1,
          },
        ],
        "shipping": Immutable.Map {
          "amount": "0.00",
        },
        "transactions": Immutable.List [
          Immutable.Map {
            "amount": "1.00",
          },
        ],
      }
    }
    reason=""
    refund={
      Immutable.Map {
        "shipping": Immutable.Map {
          "amount": "0.00",
          "tax": "0.00",
          "maximum_refundable": "2.00",
        },
        "refund_line_items": Immutable.List [
          Immutable.Map {
            "subtotal": "1.00",
            "location_id": 123,
            "price": "1.00",
            "discounted_price": "1.00",
            "quantity": 1,
            "discounted_total_price": "1.00",
            "total_tax": "0.20",
            "total_cart_discount_amount": "0.00",
            "restock_type": "no_restock",
            "line_item_id": 4193100136471,
          },
        ],
        "transactions": Immutable.List [
          Immutable.Map {
            "order_id": 1894175539223,
            "kind": "suggested_refund",
            "gateway": "manual",
            "parent_id": 2521452118039,
            "amount": "1.20",
            "currency": "USD",
            "maximum_refundable": "1.20",
          },
        ],
        "currency": "USD",
      }
    }
    setPayload={[MockFunction]}
  />
</Fragment>
`;

exports[`<RefundOrderForm/> render() should render for multi-currency order 1`] = `
<Fragment>
  <Memo(OrderTable)
    currencyCode="USD"
    lineItems={
      Immutable.List [
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
      ]
    }
    onLineItemChange={[MockFunction]}
    refund={
      Immutable.Map {
        "shipping": Immutable.Map {
          "amount": "0.00",
          "tax": "0.00",
          "maximum_refundable": "2.00",
        },
        "refund_line_items": Immutable.List [
          Immutable.Map {
            "subtotal": "1.00",
            "location_id": 123,
            "price": "1.00",
            "discounted_price": "1.00",
            "quantity": 1,
            "discounted_total_price": "1.00",
            "total_tax": "0.20",
            "total_cart_discount_amount": "0.00",
            "restock_type": "no_restock",
            "line_item_id": 4193100136471,
          },
        ],
        "transactions": Immutable.List [
          Immutable.Map {
            "order_id": 1894175539223,
            "kind": "suggested_refund",
            "gateway": "manual",
            "parent_id": 2521452118039,
            "amount": "1.20",
            "currency": "USD",
            "maximum_refundable": "1.20",
          },
        ],
        "currency": "USD",
      }
    }
    shopCurrencyCode="JPY"
    shopName="storegorgias3"
  />
  <OrderFooter
    actionName="shopifyCancelOrder"
    currencyCode="USD"
    editable={true}
    hasShippingLine={true}
    loading={false}
    notify={false}
    onNotifyChange={[MockFunction]}
    onPayloadChange={[MockFunction]}
    onReasonChange={[MockFunction]}
    payload={
      Immutable.Map {
        "currency": "USD",
        "restock": true,
        "notify": true,
        "refund_line_items": Immutable.List [
          Immutable.Map {
            "line_item_id": 4193100136471,
            "restock_type": "cancel",
            "fulfillment_status": null,
            "quantity": 1,
          },
        ],
        "shipping": Immutable.Map {
          "amount": "0.00",
        },
        "transactions": Immutable.List [
          Immutable.Map {
            "amount": "1.00",
          },
        ],
      }
    }
    reason=""
    refund={
      Immutable.Map {
        "shipping": Immutable.Map {
          "amount": "0.00",
          "tax": "0.00",
          "maximum_refundable": "2.00",
        },
        "refund_line_items": Immutable.List [
          Immutable.Map {
            "subtotal": "1.00",
            "location_id": 123,
            "price": "1.00",
            "discounted_price": "1.00",
            "quantity": 1,
            "discounted_total_price": "1.00",
            "total_tax": "0.20",
            "total_cart_discount_amount": "0.00",
            "restock_type": "no_restock",
            "line_item_id": 4193100136471,
          },
        ],
        "transactions": Immutable.List [
          Immutable.Map {
            "order_id": 1894175539223,
            "kind": "suggested_refund",
            "gateway": "manual",
            "parent_id": 2521452118039,
            "amount": "1.20",
            "currency": "USD",
            "maximum_refundable": "1.20",
          },
        ],
        "currency": "USD",
      }
    }
    setPayload={[MockFunction]}
  />
</Fragment>
`;
